Fixed the spacing on the play button

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   text-align: center;
-  margin: 2px auto;
+  margin: 0 auto;
   background-color: white;
 }
 
@@ -23,6 +23,10 @@ body {
 
 #titleStart {
   display: block;
+}
+
+#title {
+  display: inline-block;
 }
 
 #scores {
@@ -107,20 +111,21 @@ h3 {
   display: inline-block;
 }
 
-#title {
+/* #title {
   display: inline-block;
-}
+} */
 
 #btn {
   font-size: 1.5em;
   padding:.5em 1.5em;
   background-color: lightskyblue;
-  margin: 5px 5px;
+  margin-left: 45px;
   color: white;
   transition: .1s;
   outline: none;
   border-top-left-radius: 1.5em;
   border-bottom-right-radius: 1.5em;
+  display: inline-block;
 }
 #btn:hover {
   color: white;
